# guile-xkbcommon

./: .gitignore  .guix-channel  Makefile.am  README  channels.scm  configure.ac  guix.scm
.github/workflows/: ci.yml
.guix/modules/: guile-xkbcommon-package.scm
build-aux/: test-driver.scm
scripts/: gen-keysyms.scm  gen-xkbregistry.scm  gen.scm.in
tests/: context.scm  keysym.scm  state.scm
xkbcommon/: config.scm.in  keysyms.scm  xkbcommon.scm  xkbregistry.scm
